# strata-reader

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  uv.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish-pypi.yml  release-publish.yml  release-wheels.yml
benches/: batch.py  fidelity.py  visual_regression.py
crates/strata-cli/: Cargo.toml
crates/strata-cli/src/: main.rs
crates/strata-core/: Cargo.toml
crates/strata-core/proptest-regressions/: bbox.txt
crates/strata-core/src/: bbox.rs  block.rs  document.rs  geometry.rs  lib.rs  page.rs  provenance.rs
crates/strata-fusion/: Cargo.toml
crates/strata-fusion/src/: chunker.rs  fuser.rs  lib.rs  sections.rs
crates/strata-geometry/: Cargo.toml
crates/strata-geometry/src/: cluster_table.rs  headings.rs  lib.rs  noise.rs  paragraph.rs  rtree_index.rs  table_border.rs  text.rs  word_line.rs  xycut.rs
crates/strata-ia-bridge/: Cargo.toml  build.rs
crates/strata-ia-bridge/benches/: stream_vs_unary.rs
crates/strata-ia-bridge/proto/: strata_ia.proto
crates/strata-ia-bridge/src/: client.rs  embedded.rs  error.rs  lib.rs
crates/strata-pdf/: Cargo.toml
crates/strata-pdf/src/: backend.rs  bindings.rs  decoder.rs  glyph.rs  image.rs  lib.rs  pdfium_backend.rs  pure_backend.rs  quality.rs  vector.rs
crates/strata-pdf/tests/: arxiv_paper.rs
crates/strata-pipeline/: Cargo.toml
crates/strata-pipeline/src/: artifacts.rs  error.rs  ia_bridge.rs  lib.rs  mappers.rs  options.rs  pipeline.rs
crates/strata-pipeline/tests/: pipeline_e2e_mock.rs  pipeline_native.rs
crates/strata-py/: Cargo.toml
crates/strata-py/src/: lib.rs
crates/strata-quality/: Cargo.toml
crates/strata-quality/src/: cid_detector.rs  lib.rs
crates/strata-runtime/: Cargo.toml
crates/strata-runtime/src/: backpressure.rs  capabilities.rs  gpu_monitor.rs  gpu_pool.rs  lib.rs  metrics.rs  scheduler.rs
crates/strata-serialize/: Cargo.toml
crates/strata-serialize/src/: json_graph.rs  lib.rs  markdown.rs
crates/strata-server/: Cargo.toml
crates/strata-server/src/: jobs.rs  lib.rs  main.rs  routes.rs  state.rs  worker.rs
crates/strata-server/src/store/: memory.rs  mod.rs  sqlite.rs
crates/strata-triage/: Cargo.toml
crates/strata-triage/src/: decision.rs  lib.rs  profiles.rs  render.rs  triage.rs
crates/strata-triage/tests/: render_crop.rs
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/architecture/: architecture.md
docs/reference/: description_proyect.md
docs/schema/: doctor.schema.json
docs/task/: tareas.md  tareas_benchmark.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html
python/strata_ia/: __init__.py  cache.py  config.py  grpc_server.py  main.py  models.py  resource_guard.py
python/strata_ia/adapters/: __init__.py  ollama.py  surya.py  tesseract.py
python/strata_ia/proto/: strata_ia_pb2.py  strata_ia_pb2.pyi  strata_ia_pb2_grpc.py
python/strata_ia/routers/: __init__.py  ocr.py  prompts.py  vlm_formula.py  vlm_image.py  vlm_table.py
python/strata_ia/services/: ocr.py
python/strata_reader/: __init__.py  _native.pyi  cli.py
scripts/: dev_up.ps1  dev_up.sh  gen_proto.py  pdfium-checksums.sha256  pull_models.ps1  pull_models.sh  regen_goldens.py  release.sh  seed_fixtures.py
tests/e2e/: conftest.py  test_strata_parse.py
tests/fixtures/: README.md
tests/fixtures/expected/: REVIEW.md  borderless_table.golden.json  borderless_table.golden.md  cid_corrupted.golden.json  cid_corrupted.golden.md  equation_heavy.golden.json  equation_heavy.golden.md  figure_with_caption.golden.json  figure_with_caption.golden.md  mixed_lang_arabic.golden.json  mixed_lang_arabic.golden.md  native_simple.golden.json  native_simple.golden.md  page_counts.toml  scanned_paper.golden.json  scanned_paper.golden.md  two_column_paper.golden.json  two_column_paper.golden.md
tests/fixtures/pdfs/: CHECKSUMS.sha256
tests/fixtures/salidas/: attention_is_all_you_need.md  bert.md  climax.md  codex.md  entanglement_tensor_networks.md  llama.md  neural_machine_translation.md  resnet.md  scaling_laws.md  strata_real_metrics.json  transformative_agi.md
tests/fixtures/sources/: borderless_table.tex  cid_corrupted.tex  equation_heavy.tex  figure_with_caption.tex  mixed_lang_arabic.tex  native_simple.tex
tests/test_pruebas/: EXPLICACION_BENCHMARK.md  download_articles.py  orchestrate_benchmarks.py  plot_benchmark.py  quality_benchmark.py  run_five_options.py  run_markitdown.py  run_opendataloader.py  run_strata_reader.py
tests/unit_py/: test_advanced_metrics.py  test_ia_cache.py  test_ia_config.py  test_ia_grpc_server.py  test_ia_main.py  test_ia_models.py  test_ia_ocr_adapters.py  test_ia_ollama_adapter.py  test_ia_resource_guard.py  test_ia_routers.py  test_pdfium_discovery.py  test_proto_contract.py  test_schema_validation.py
xtask/: Cargo.toml
xtask/src/: main.rs
