[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Repo-internal automation (schema generation, fixture helpers)."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
strata-core = { path = "../crates/strata-core" }
serde_json = { workspace = true }
schemars = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
