[package]
name = "strata-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "`strata` CLI binary (parse, serve, bench, doctor, cache, models)."

[[bin]]
name = "strata"
path = "src/main.rs"

[dependencies]
strata-core = { path = "../strata-core" }
strata-runtime = { path = "../strata-runtime" }
strata-server = { path = "../strata-server" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
nvml-wrapper = { workspace = true }
rusqlite = { workspace = true }
