[package]
name = "strata-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "`strata` CLI binary (parse, serve, bench, doctor, cache, models)."

[[bin]]
name = "strata"
path = "src/main.rs"

[dependencies]
strata-core = { path = "../strata-core" }
strata-pdf = { path = "../strata-pdf" }
strata-geometry = { path = "../strata-geometry" }
strata-fusion = { path = "../strata-fusion" }
strata-serialize = { path = "../strata-serialize" }
strata-quality = { path = "../strata-quality" }
strata-triage = { path = "../strata-triage" }
strata-runtime = { path = "../strata-runtime" }
strata-server = { path = "../strata-server" }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
nvml-wrapper = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
