[package]
name = "strata-fusion"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Re-assemble the native Rust AST with the IA-side payloads, build the section tree, and emit semantic chunks for RAG."

[dependencies]
strata-core = { path = "../strata-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lib]
doctest = false
