[package]
name = "strata-geometry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure-Rust spatial algorithms: R-Tree, line/word clustering, XY-Cut++, table detection, heading classification."

[dependencies]
strata-core = { path = "../strata-core" }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lib]
doctest = false
