[package]
name = "strata-ia-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust client + protobuf contract for the Python IA microservice."
build = "build.rs"

[dependencies]
strata-core = { path = "../strata-core" }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = "0.14"
prost-types = "0.14"
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
async-stream = "0.3"

[[bench]]
name = "stream_vs_unary"
harness = false
