[package]
name = "strata-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PDF decoder layer (pdfium-render bindings, glyph/path/image extraction)."

[dependencies]
strata-core = { path = "../strata-core" }
pdfium-render = { workspace = true, optional = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

[features]
default = ["pure-backend"]
pdfium-backend = ["dep:pdfium-render"]
pure-backend = []

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lib]
doctest = false
