[package]
name = "strata-quality"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Per-page quality detectors: CID font health, scan signals, font validation."

[dependencies]
strata-core = { path = "../strata-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lib]
doctest = false
