[package]
name = "strata-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Markdown (Vector-RAG) and JSON Graph-RAG serializers for Strata-Reader."

[dependencies]
strata-core = { path = "../strata-core" }
strata-fusion = { path = "../strata-fusion" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lib]
doctest = false
