[package]
name = "strata-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "axum HTTP/REST microservice for strata-reader."

[[bin]]
name = "strata-server"
path = "src/main.rs"

[dependencies]
strata-core = { path = "../strata-core" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
