[package]
name = "strata-triage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Triage Engine: decide native vs OCR vs VLM per block, and render crops to PNG."

[dependencies]
strata-core = { path = "../strata-core" }
strata-quality = { path = "../strata-quality" }
pdfium-render = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
strata-pdf = { path = "../strata-pdf" }
insta = { workspace = true }
proptest = { workspace = true }

[lib]
doctest = false
